--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.quranfinalproject.MainActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_surah"
+            android:title="Show Surah" />
+
+        <item
+            android:id="@+id/nav_parah"
+            android:title="Show Parah" />
+    </group>
+
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_git"
+            android:title="Show Github" />
+        <item
+            android:id="@+id/nav_exit"
+            android:title="Exit" />
+    </group>
+
 </menu>
