--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ImageView
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:src="@mipmap/dev_img_round"
-        android:layout_gravity="center"/>
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Muhammad Ismaeel"
         android:textSize="20dp"
-        android:layout_gravity="center"/>
+        />
 
     <TextView
         android:layout_width="wrap_content"
