--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -7,6 +7,7 @@
     <ImageView
         android:layout_width="125dp"
         android:layout_height="125dp"
+        android:layout_gravity="center"
         android:src="@mipmap/dev_img_round"
         />
 
